// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tour Value Prop Component matches snapshot for cc 1`] = `
<div
  className="value-prop cc-to-tutor"
>
  <h1
    className="heading"
  >
    Welcome to 
    <span
      className="course-branding"
      data-is-beta={true}
    >
      OpenStax Tutor
    </span>
    !
  </h1>
  <h2
    className="sub-heading"
  >
    Concept Coach is ending, but a better tool is here. Here's what your students have to look forward to!
  </h2>
  <div
    className="column-content"
  >
    <div
      className="column spaced"
    >
      <h3>
        Spaced practice
      </h3>
      <p>
        Help students remember what they previously learned
      </p>
    </div>
    <div
      className="column personalized"
    >
      <h3>
        Personalized questions
      </h3>
      <p>
        Help students improve where they need it most
      </p>
    </div>
    <div
      className="column two-step"
    >
      <h3>
        Two-step questions
      </h3>
      <p>
        Help students study more effectively
      </p>
    </div>
    <div
      className="column low-cost"
    >
      <h3>
        Low cost
      </h3>
      <p>
        $10
         per course saves students money
      </p>
    </div>
  </div>
</div>
`;

exports[`Tour Value Prop Component matches snapshot for sunset cc 1`] = `
<div
  className="value-prop cc-sunset"
>
  <h1
    className="heading"
  >
    Looking for your Concept Coach courses?
  </h1>
  <div
    className="column-content"
  >
    <div
      className="column thanks"
    >
      <p>
        Thanks for participating in the
        <br />
        Concept Coach pilot! Read our
        <br />
        <a
          href="https://openstax.org/blog/concept-coach-ending-greater-tools-are-coming"
          target="_blank"
        >
          blog post
        </a>
         to find out what we learned and how we’re moving forward.
      </p>
    </div>
    <div
      className="column export-by"
    >
      <p>
        The last day to export your
        <br />
        Concept Coach scores reports is October 1.
      </p>
    </div>
    <div
      className="column not-launched-yet"
    >
      <p>
        We haven’t launched
        <br />
        OpenStax Tutor in your subject yet. We’ll let you know as soon as it’s available.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tour Value Prop Component matches snapshot for tutor 1`] = `
<div
  className="value-prop welcome-to-tutor"
>
  <h1
    className="heading"
  >
    Welcome to 
    <span
      className="course-branding"
      data-is-beta={true}
    >
      OpenStax Tutor
    </span>
    !
  </h1>
  <h2
    className="sub-heading"
  >
    Improve how your students learn with research-based technology -- for only 
    $10
    .
  </h2>
  <div
    className="column-content"
  >
    <div
      className="column spaced"
    >
      <h3>
        Spaced practice
      </h3>
      <p>
        Help students remember what they previously learned
      </p>
    </div>
    <div
      className="column personalized"
    >
      <h3>
        Personalized questions
      </h3>
      <p>
        Help students improve where they need it most
      </p>
    </div>
    <div
      className="column two-step"
    >
      <h3>
        Two-step questions
      </h3>
      <p>
        Help students study more effectively
      </p>
    </div>
    <div
      className="column low-cost"
    >
      <h3>
        Low cost
      </h3>
      <p>
        $10
         per course saves students money
      </p>
    </div>
  </div>
</div>
`;
